@@ -1,11 +1,6 @@
 package no.nav.melosys.tjenester.gui.kodeverk;
 
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.*;
 import java.util.stream.Stream;
 
 import io.swagger.annotations.Api;
@@ -33,7 +28,7 @@ import static no.nav.melosys.domain.kodeverk.Trygdedekninger.*;
 @Protected
 @RestController
 @RequestMapping("/kodeverk/melosys-internt")
-@Api(tags = { "kodeverk/melosys-internt"})
+@Api(tags = {"kodeverk/melosys-internt"})
 @Scope(value = WebApplicationContext.SCOPE_REQUEST)
 public class MelosysInterntKodeverkTjeneste {
 
@@ -43,6 +38,10 @@ public class MelosysInterntKodeverkTjeneste {
         FTRL_2_9_FØRSTE_LEDD_B_PENSJON.getKode(),
         FTRL_2_9_FØRSTE_LEDD_C_HELSE_PENSJON.getKode(),
         FTRL_2_9_FØRSTE_LEDD_C_ANDRE_LEDD_HELSE_PENSJON_SYKE_FORELDREPENGER.getKode());
+
+    private static final List<InnvilgelsesResultat> gyldigeInnvilgelsesResultat = Arrays.stream(InnvilgelsesResultat.values())
+        .filter(kode -> !kode.equals(InnvilgelsesResultat.DELVIS_INNVILGET))
+        .toList();
 
     private final MedlemskapsperiodeService medlemskapsperiodeService;
 
@@ -58,7 +57,7 @@ public class MelosysInterntKodeverkTjeneste {
             medlemskapsperiodeService.hentGyldigeTrygdedekninger(),
             Comparator.comparingInt(c -> definedOrderTrygdedekning.indexOf(c.getKode()))));
         kodeverdier.put(Vilkaar.class.getSimpleName(), tilKodeDto(Vilkaar.values()));
-        kodeverdier.put(InnvilgelsesResultat.class.getSimpleName(), tilKodeDto(InnvilgelsesResultat.values()));
+        kodeverdier.put(InnvilgelsesResultat.class.getSimpleName(), tilKodeDto(gyldigeInnvilgelsesResultat));
         kodeverdier.put("begrunnelser", lagBegrunnelser());
         return ResponseEntity.ok(kodeverdier);
     }
@@ -73,7 +72,7 @@ public class MelosysInterntKodeverkTjeneste {
     }
 
     private <T extends Kodeverk> List<KodeDto> tilKodeDto(Collection<T> kodeverk, Comparator<KodeDto> comparator) {
-        return tilKodeDto(kodeverk).stream().sorted(comparator).collect(Collectors.toList());
+        return tilKodeDto(kodeverk).stream().sorted(comparator).toList();
     }
 
     private <T extends Kodeverk> Collection<KodeDto> tilKodeDto(Collection<T> kodeverk) {
@@ -81,6 +80,6 @@ public class MelosysInterntKodeverkTjeneste {
     }
 
     private Collection<KodeDto> tilKodeDto(Kodeverk... kodeverk) {
-        return Stream.of(kodeverk).map(k -> new KodeDto(k.getKode(), k.getBeskrivelse())).collect(Collectors.toList());
+        return Stream.of(kodeverk).map(k -> new KodeDto(k.getKode(), k.getBeskrivelse())).toList();
     }
 }
